Reparacion de acitivity mostrar trabajadores
Se daño intentanto implementarle una funcion mas, regreso a la version anterior

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DIF</string>
+    <string name="URL_USUARIOS">https://checolin00p2.000webhostapp.com/DIF/dif_php/buscarTrabajador.php</string>
 </resources>
